--- a/conteudo/introducao/introducao.html
+++ b/conteudo/introducao/introducao.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css">
 	<script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
 
+
 	<script>
 		setInterval(oculta, 500);
 		function oculta() {
@@ -27,6 +28,25 @@
 		* {
 			font-family: 'Catamaran', sans-serif;
 			font-size: 1.1rem;
+		}
+					/* width */
+					::-webkit-scrollbar {
+			width: 10px;
+			}
+
+			/* Track */
+			::-webkit-scrollbar-track {
+			background: #f1f1f1;
+			}
+
+			/* Handle */
+			::-webkit-scrollbar-thumb {
+			background: #888;
+			}
+
+			/* Handle on hover */
+			::-webkit-scrollbar-thumb:hover {
+			background: #555;
 		}
 	</style>
 	<style>
