--- a/conteudo/aideiadesimbolo/1.html
+++ b/conteudo/aideiadesimbolo/1.html
@@ -14,6 +14,22 @@
         };
     </script>
     <style>
+                    /* width */
+                    ::-webkit-scrollbar {
+            width: 5px;
+            }
+
+            /* Track */
+            ::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 5px grey;
+            border-radius: 10px;
+            }
+
+            /* Handle */
+            ::-webkit-scrollbar-thumb {
+            background: #fb743f;
+            border-radius: 10px;
+            }
         body {
             display: none;
         }
