--- a/conteudo/introducao/1.html
+++ b/conteudo/introducao/1.html
@@ -34,6 +34,23 @@
             text-transform: uppercase;
             font-family: 'Permanent Marker', cursive;
         }
+
+            /* width */
+            ::-webkit-scrollbar {
+            width: 5px;
+            }
+
+            /* Track */
+            ::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 5px grey;
+            border-radius: 10px;
+            }
+
+            /* Handle */
+            ::-webkit-scrollbar-thumb {
+            background: #fb743f;
+            border-radius: 10px;
+            }
     </style>
 </head>
 
