--- a/conteudo/introducao/2.html
+++ b/conteudo/introducao/2.html
@@ -15,6 +15,22 @@
     <link href="https://fonts.googleapis.com/css?family=Neucha&display=swap" rel="stylesheet">
     </script>
     <style>
+                    /* width */
+            ::-webkit-scrollbar {
+            width: 5px;
+            }
+
+            /* Track */
+            ::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 5px grey;
+            border-radius: 10px;
+            }
+
+            /* Handle */
+            ::-webkit-scrollbar-thumb {
+            background: #fb743f;
+            border-radius: 10px;
+            }
         body {
             display: none;
             font-family: 'PT Sans', sans-serif;
