--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 
+		<style>
+
+		</style>
 		
 	</head>
 	<body>
