--- a/organizacao-da-pagina-escrita.html
+++ b/organizacao-da-pagina-escrita.html
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 		<div class="rodape">
-			Quem Somos? | Contato | FAQ
+			<a class="retira-link" href="quem-somos.html">Quem somos?</a> | <a class="retira-link" href="">Contato</a> | <a class="retira-link" href="">FAQ</a>
 		</div>
 	</body>
 </html>
