--- a/conteudo/sonsdafala/8.html
+++ b/conteudo/sonsdafala/8.html
@@ -173,11 +173,72 @@
         </div>
         <div class="row">
             <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
+                <p>
+                    Agora, iremos orientá-los a realizar as
+                    atividades para ajudar os alunos a refletirem sobre as
+                    palavras em sua dimensão sonora e analisarem suas
+                    formas gráficas.
+                </p>
+                <p>
+                    Segundo Lemle (2007), a palavra designa o
+                    acasalamento de som e sentido que utilizamos como
+                    tijolos na expressão dos nossos pensamentos, ou seja,
+                    ela é o cerne da relação simbólica essencial contida
+                    numa mensagem linguística: a relação entre conceitos e
+                    sequências de sons da fala.
+                </p>
+                <p>
+                    No primeiro momento, apresentaremos os jogos com
+                    os nomes próprios, que além de serem palavras com muito
+                    significado, permitem o contato do aluno com diferentes
+                    sílabas, diferentes tamanhos de palavras, conservação
+                    das sílabas, bem como a aprendizagem do valor sonoro de
+                    algumas consoantes.
+                </p>
+                <p>
+                    No segundo momento, exploraremos por meio de
+                    gêneros de texto - trava-língua, parlenda - da tradição
+                    oral, que fazem parte da cultura dos alunos, e que
+                    poderão ser explorados como ajuda para a consolidação
+                    do emprego de determinadas correspondências som-grafia,
+                    pois contêm uma série de rimas, aliterações e outros
+                    recursos que produzem efeitos sonoros e permitem uma
+                    rica exploração desses efeitos sonoros, acompanhada da
+                    escrita das palavras.
+                </p>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12">
-
+                <center>
+                    <p>
+                        <b>PRIMEIRO MOMENTO - JOGOS UTILIZANDO NOMES PRÓPRIOS</b>
+                    </p>
+                </center>
+                <p>
+                    Nesta etapa do processo de alfabetização, o
+                    alfabetizando necessita vivenciar situações lúdicas,
+                    mesmo sendo jovem ou adulto. Quem não gosta de brincar?
+                    Independentemente de jogar em grupos, em duplas ou
+                    individualmente, o aluno tende a ajudar seus colegas
+                    espontaneamente numa perspectiva vigotskiana.
+                </p>
+                <p>
+                    As atividades com jogos são enriquecedoras, porque
+                    levam o alfabetizando a perceber que palavras
+                    diferentes possuem partes sonoras iguais, ajudando-o a
+                    compreender com mais facilidade as relações entre as
+                    unidades sonoras (consoantes e vogais) e a escrita.
+                </p>
+                <p>
+                    Iniciaremos com os nomes próprios, porque além de
+                    serem palavras carregadas de significado, permitem o
+                    contato do aluno com diferentes famílias silábicas, com
+                    diferentes tamanhos de palavras, com a conservação das
+                    sílabas entre uma palavra e outra, e, principalmente, a
+                    aprendizagem das unidades sonoras (consoantes e
+                    vogais).
+                </p>
             </div>
         </div>
         <div class="ro
