--- a/conteudo/sonsdafala/8.html
+++ b/conteudo/sonsdafala/8.html
@@ -77,6 +77,11 @@
             text-indent: 5%;
         }
 
+        ul, li{
+            font-size: 1.5rem;
+            font-family: 'PT Sans', sans-serif;   
+        }
+
         h2 {
             text-transform: uppercase;
             font-family: 'PT Sans', sans-serif;
@@ -239,6 +244,100 @@
                     aprendizagem das unidades sonoras (consoantes e
                     vogais).
                 </p>
+                <p>
+                    <b>JOGO COM AS SÍLABAS DO NOME</b>
+                </p>
+                <p>
+                    <b>Objetivo:</b> levar o aluno a refletir sobre a segmentação da palavra; recortar, colar, jogar, construir nomes, competir.
+                </p>
+                <p>
+                    <b>PROCEDIMENTOS</b></br>
+                    <ul>
+                        <li>
+                            Faça a leitura em voz alta de cada sílaba.
+                        </li>
+                        <li>
+                            Cole em cartolina (ou E.V.A) e depois recorte.
+                        </li>
+                        <li>
+                            Jogue com seus alunos, formando palavras com as sílabas.
+                        </li>
+                        <li>
+                            Ganha o jogo quem conseguir formar o maior número de palavras.
+                        </li>
+                    </ul>
+                </p>
+                <p>
+                    <b>ATENÇÃO:</b> Esta atividade, você deve iniciar com as sílabas que correspondem à primeira relação (BETO, DUDA), e progressivamente, repeti-la, introduzindo as demais relações entre letra e som.
+                </p>
+                <p>
+                    <b>MODELO</b>
+                </p>
+                <p>
+                    <b style="color: blue !important;">LUDUVICA</b>
+                    <center><img src="../img/luduvica.png" alt=""></center>
+                </p>
+
+
+
+                <p>
+                    <b>BINGO COM AS SÍLABAS INICIAIS DOS NOMES</b>
+                </p>
+                <p>
+                    <b>Objetivo:</b> desenvolver a percepção auditiva e visual das letras e sons do alfabeto; jogar, divertir.
+                </p>
+                <p>
+                    <b>PROCEDIMENTOS</b></br>
+                    <ul>
+                        <li>
+                            Entregue uma cartela contendo alguns nomes de alunos e um saquinho com sementes (ou pedrinhas).
+                        </li>
+                        <li>
+                            Depois retire aleatoriamente do seu saquinho um nome de cada vez, “cantando” somente a sílaba inicial. Os alunos deverão observar se a sílaba cantada pertence a algum nome contido em sua cartela e marcar. 
+                        </li>
+                        <li>
+                            Caso, o aluno não consiga no início identificar a sílaba inicial de cada nome só pela pronúncia, você deverá mostrar o cartão; (cada nome deve ter a sílaba inicial escrita em outra cor, tornando-se evidente a percepção).
+                        </li>
+                    </ul>
+                </p>
+                <p>
+                    <center><img src="../img/bingo.png" alt=""></center>
+                </p>
+
+
+
+
+                <p>
+                    <b>FALTA SÍLABA NO NOME</b>
+                </p>
+                <p>
+                    <b>Objetivo:</b> levar o aluno a refletir sobre a segmentação das palavras; recortar, colar, jogar, construir nomes, competir.
+                </p>
+                <p>
+                    <b>PROCEDIMENTOS</b></br>
+                    <ul>
+                        <li>
+                            Divida a turma em pequenos grupos.
+                        </li>
+                        <li>
+                            Dê para cada grupo os cartões com os nomes que faltam uma sílaba 
+                        </li>
+                        <li>
+                            Distribua os cartões contendo as sílabas que faltam.
+                        </li>
+                        <li>
+                            Cada aluno deverá completar a palavra contida em seu cartão.
+                        </li>
+                    </ul>
+                </p>
+                <p>
+                    <b>MODELO</b>
+                </p>
+                <p>
+                    <center><img src="../img/FALA_SILABA.PNG" alt=""></center>
+                </p>
+
+
             </div>
         </div>
         <div class="ro
