--- a/conteudo/unidadepalavra/1.html
+++ b/conteudo/unidadepalavra/1.html
@@ -174,6 +174,18 @@
         </div>
         <div class="row">
             <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
+                <p>
+                    <b>PRIMEIRO MOMENTO</b>
+                </p>
+                <p>
+                    Para escrever, o alfabetizando deve saber isolar, na corrente da fala, as unidades que são palavras, que devem ser escritas entre dois espaços brancos.
+                </p>
+                <p>
+                    No primeiro momento, trabalharemos com o tema  gerador “Identidade”, a partir dos próprios nomes dos alunos, a fim de que eles possam explorar suas dimensões sonoras e gráficas como também para que eles reflitam sobre sua história e quem são. 
+                </p>
+                <p>
+                    No segundo momento, desenvolveremos a contextualização da leitura e escrita objetivando possibilitar aos alunos o contato com gêneros de textos variados em um universo de temas geradores significativos: trabalho, folclore, meio-ambiente; incentivar seu potencial criativo para que perceba a leitura e a escrita como algo prazeroso e significativo para sua vida e refletir sua realidade sociocultural e econômica, dando ênfase à sua formação crítica.
+                </p>
             </div>
         </div>
         <div class="row">
