--- a/conteudo/sonsdafala/8.html
+++ b/conteudo/sonsdafala/8.html
@@ -338,10 +338,157 @@
                 </p>
 
 
+
+                <p>
+                    <b>GINCANA DE NOMES</b>
+                </p>
+                <p>
+                    <b>Objetivo:</b> reconhecer as escritas dos nomes através de permuta e análise combinatória, favorecendo o intercâmbio entre os grupos; diversão, escrita, troca de ideias, colagem.
+                </p>
+                <p>
+                    <b>PROCEDIMENTOS</b></br>
+                    <ul>
+                        <li>
+                            Divida a turma em pequenos grupos.
+                        </li>
+                        <li>
+                            Cada aluno deverá escrever seu nome, de acordo com o número de componentes de cada grupo, em um papel. Caso sejam 5 alunos, escreverá 5 vezes.
+                        </li>
+                        <li>
+                            Ao final, cada aluno deve ter no seu álbum o nome de todos os colegas do grupo.
+                        </li>
+                    </ul>
+                </p>
+                <p>
+                    <b>ATENÇÃO: </b> Inicialmente, trabalhe com um grupo de cada vez e, em seguida, com toda a turma.
+                </p>
+
+
+
+
+                <p>
+                    <b>QUEBRA CABEÇAS COM OS NOMES</b>
+                </p>
+                <p>
+                    <b>Objetivo:</b> levar o aluno a refletir sobre a segmentação das palavras; recortar, colar, jogar, construir nomes, competir.
+                </p>
+                <p>
+                    <b>PROCEDIMENTOS</b></br>
+                    <ul>
+                        <li>
+                            Dê para cada aluno um nome escrito (de preferência, no início, os dos colegas) dividido em “pedaços” que correspondam ao número de sílabas.
+                        </li>
+                        <li>
+                            Em seguida, embaralhe-os sobre a mesa, e solicite ao aluno que monte o nome, colocando-o em um outro cartão.
+                        </li>
+                    </ul>
+                </p>
+                <p>
+                    <b>MODELO</b>
+                </p>
+                <p>
+                    <center><img src="../img/gisela.png" alt=""></center>
+                    <center><img src="../img/leandro.png" alt=""></center>
+                </p>
+                <p>
+                    <b>ATENÇÃO:</b>Quando os alunos já estiverem trabalhando os sobrenomes, esta atividade pode ser realizada com o nome completo. No decorrer do processo, pode ser utilizada a letra cursiva.
+                </p>
+
+
+
+
+
+                <p>
+                    <b>DOMINÓ DE NOMES</b>
+                </p>
+                <p>
+                    <b>Objetivo:</b> ajudar o aluno a fazer a análise da escrita; jogar, divertir, fazer correspondência.
+                </p>
+                <p>
+                    <b>PROCEDIMENTOS</b></br>
+                    <ul>
+                        <li>
+                            Recorte os nomes e cole um em cima do nome correspondente.
+                        </li>
+                    </ul>
+                </p>
+                <p>
+                    <b>MODELO</b></br>As peças do dominó podem ser montadas assim:
+                </p>
+                <p>
+                    <center><img src="../img/domino_1.png" alt=""></center>
+                </p>
+                <p>
+                    ou podem ser montadas assim:                    
+                </p>
+                <p>
+                    <center><img src="../img/domino_2.png" alt=""></center>
+                </p>
+
             </div>
         </div>
-        <div class="ro
-        w" id="btn-imprimir" onclick="imprimeConteudo()">
+
+        <div class="row">
+            <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12">
+                <center>
+                    <p>
+                        <b>SEGUNDO MOMENTO - JOGOS UTILIZANDO OS GÊNEROS DE TEXTO TRAVA-LÍNGUAS</b>
+                    </p>
+                </center>
+                <p>
+                    <b>Trava-língua</b> é um gênero de texto de origem popular que possui uma linguagem simples e é bastante rico em ludismo, sonoridade e semântica, ou seja, na brincadeira com o som, com a forma e o significado das palavras da língua culta. É formado por jogos de palavras: onomatopeias, repetições e rimas que encantam não somente as crianças como também os adultos, levando-os a exercitarem a linguagem oral através da recitação sem tropeços na pronúncia das palavras.
+                </p>
+                <p>
+                    Os trava-línguas fazem parte da cultura popular, do nosso folclore. Portanto, este gênero de texto deve servir para provocar nos alunos o gosto pela tradição oral de suas famílias e da comunidade e como um ótimo instrumento para você trabalhar a leitura oral e, também, a escrita.
+                </p>
+                <p>
+                    A leitura de trava-línguas menos conhecidos e a produção de novos trava-línguas (para serem lidos por você e pelos alunos) podem constituir uma experiência de combinação entre leitura e produção de curtíssimos textos de cunho humorístico.
+                </p>
+                <p>
+                    <b>OBJETIVO: </b>conhecer os gêneros de texto da cultura popular; desenvolver a linguagem oral propiciando uma reflexão sobre a escrita; apropriar-se da base alfabética; pronunciar as palavras adequadamente; expressar-se sem tropeçar e sem inibição.
+                </p>
+                <p>
+                    <b>PROCEDIMENTOS</b></br>
+                    <ul>
+                        <li>
+                            Faça um levantamento com os alunos sobre o conhecimento que eles têm deste gênero de texto;
+                        </li>
+                        <li>
+                            Exponha em cartaz na sala de aula um trava-língua e leia várias vezes;
+                        </li>
+                        <li>
+                            Os alunos devem copiar o texto; realizar as atividades de <i>consciência fonológicas:</i> identificar palavras que rimam, produzir palavras que rimam com outra, identificar palavras que começam com o mesmo fonema;
+                        </li>
+                        <li>
+                            Produza atividades escritas como: <b>lacunado</b> (abra lacunas no texto para que o aluno escreva palavras que faltam no trava-língua); <b>caça-letra</b> e <b>caça-palavras</b> (peça aos alunos que circulem letras e palavras no trava-língua); <b>ordenação de tirinhas</b> (recorte cada verso do trava-língua e peça aos alunos para reordená-los, colando em uma folha de papel ou caderno), <b>cruzadinhas</b> (com palavras ou figuras do trava-língua).
+                        </li>
+                        <li>
+                            Produza um livro de coletâneas de trava-línguas.
+                        </li>
+                    </ul>
+                </p>
+                <p>
+                    <b>SOCIALIZAÇÃO: </b>
+                    <ul>
+                        <li>Concurso de trava-línguas (falar sem tropeçar nas palavras).</li>
+                    </ul>
+                </p>
+                <p>
+                    <b>EXEMPLARES DE TEXTOS</b>
+                </p>
+                <p>
+                    <table>
+                        
+                    </table>
+                </p>
+            </div>
+        </div>
+
+
+
+
+
+        <div class="row" id="btn-imprimir" onclick="imprimeConteudo()">
             <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 text-center btn-info p-2">
                 Imprimir
             </div>
