--- a/conteudo/sonsdafala/8.html
+++ b/conteudo/sonsdafala/8.html
@@ -163,6 +163,27 @@
             width: 60%;
             margin-bottom: 2rem;
         }
+        
+        #tabelaDiferenciada{
+            display: flex;
+        }
+        .celula{
+            display: flex;
+            flex-direction: column;
+            flex: 1;
+        }
+        .celula_corpo{
+            display: flex;
+            flex: 8;
+            align-items: center;
+            justify-content: center;
+        }
+        .celula_titulo{
+            display: flex;
+            flex: 2;
+            align-items: center;
+            justify-content: center;
+        }
     </style>
 </head>
 
@@ -477,9 +498,45 @@
                     <b>EXEMPLARES DE TEXTOS</b>
                 </p>
                 <p>
-                    <table>
-                        
-                    </table>
+                    <div id="tabelaDiferenciada">
+                        <div class="celula">
+                            <div class="celula_titulo">
+                                BOTA NO BOTE
+                            </div>
+                            <div class="celula_corpo">
+                                Bote a bota no bote
+                                E tire o pote do bote
+                                Bote a bota no bote
+                                E tire o pote do bote 
+                                Bote a bota no bote
+                                E tire o pote do bote       
+                                Bote a bota no bote
+                                E tire o pote do bote
+                                Bote a bota no bote
+                                E tire o pote do bote 
+                                Bote a bota no bote
+                                E tire o pote do bote                               
+                            </div>
+                        </div>
+                        <div class="celula">
+                            <div class="celula_titulo">
+                                BOTA NO BOTE
+                            </div>
+                            <div class="celula_corpo">
+                                Bote a bota no bote
+                                E tire o pote do bote                                
+                            </div>
+                        </div>
+                        <div class="celula">
+                            <div class="celula_titulo">
+                                BOTA NO BOTE
+                            </div>
+                            <div class="celula_corpo">
+                                Bote a bota no bote
+                                E tire o pote do bote                                
+                            </div>
+                        </div>
+                    </div>
                 </p>
             </div>
         </div>
