--- a/conteudo/sonsdafala/8.html
+++ b/conteudo/sonsdafala/8.html
@@ -166,11 +166,13 @@
         
         #tabelaDiferenciada{
             display: flex;
+            flex-wrap: wrap;
         }
         .celula{
             display: flex;
             flex-direction: column;
-            flex: 1;
+            flex: 1 0 30%;
+            border: 1px solid black;
         }
         .celula_corpo{
             display: flex;
@@ -183,6 +185,12 @@
             flex: 2;
             align-items: center;
             justify-content: center;
+            font-weight: bold;
+        }
+        #alinhamento{
+            margin-left: 5%;
+            font-size: 1.5rem;
+            font-family: 'PT Sans', sans-serif;
         }
     </style>
 </head>
@@ -504,36 +512,205 @@
                                 BOTA NO BOTE
                             </div>
                             <div class="celula_corpo">
-                                Bote a bota no bote
-                                E tire o pote do bote
-                                Bote a bota no bote
-                                E tire o pote do bote 
-                                Bote a bota no bote
-                                E tire o pote do bote       
-                                Bote a bota no bote
-                                E tire o pote do bote
-                                Bote a bota no bote
-                                E tire o pote do bote 
-                                Bote a bota no bote
-                                E tire o pote do bote                               
+                                Bote a bota no bote</br>
+                                E tire o pote do bote  </br>                            
                             </div>
                         </div>
                         <div class="celula">
                             <div class="celula_titulo">
-                                BOTA NO BOTE
+                                BABÁ
                             </div>
                             <div class="celula_corpo">
-                                Bote a bota no bote
-                                E tire o pote do bote                                
+                                A babá boa bebeu</br>
+                                O leite do bebê </br>                             
                             </div>
                         </div>
                         <div class="celula">
                             <div class="celula_titulo">
-                                BOTA NO BOTE
+                                PACA
                             </div>
                             <div class="celula_corpo">
-                                Bote a bota no bote
-                                E tire o pote do bote                                
+                                Quem a paca cara</br>
+                                compra, paca cara</br>
+                                pagará.</br>                         
+                            </div>
+                        </div>
+
+
+                        <div class="celula">
+                            <div class="celula_titulo">
+                                FATO E FITA
+                            </div>
+                            <div class="celula_corpo">
+                                Não sei se é fato ou fita,</br>
+                                Não sei se é fita ou se é fato</br>
+                                O fato é que ela me fita</br>
+                                E fita mesmo de fato.                             
+                            </div>
+                        </div>
+                        <div class="celula">
+                            <div class="celula_titulo">
+                                PATO PACO
+                            </div>
+                            <div class="celula_corpo">
+                                Pato Paco </br>
+                                Ou Paco Pato pacato</br>
+                                Pegou o pato</br>
+                                Pobre Pato Paco<br/>
+                                ou Paco Pato?</br>                               
+                            </div>
+                        </div>
+                        <div class="celula">
+                            <div class="celula_titulo">
+                                PAPA
+                            </div>
+                            <div class="celula_corpo">
+                                Se o papa papasse papa</br>
+                                Se o papa papasse pão,</br>
+                                O papa tudo papava</br>
+                                Seria um papa-papão.</br>                               
+                            </div>
+                        </div>
+
+
+                        <div class="celula">
+                            <div class="celula_titulo">
+                                CINCO
+                            </div>
+                            <div class="celula_corpo">
+                                Cinco bicas, cinco pipas,</br>
+                                cinco bombas</br>
+                                Tira da boca da bica, bota</br>
+                                na boca da bomba.</br>                            
+                            </div>
+                        </div>
+                        <div class="celula">
+                            <div class="celula_titulo">
+                                TIA TANTÃ
+                            </div>
+                            <div class="celula_corpo">
+                                Tinha tanta tia tantã</br>
+                                Tinha tanta anta antiga.</br>
+                                Tinha tanta anta que era tia.</br>
+                                Tinha tanta tia que era anta.</br>                              
+                            </div>
+                        </div>
+                        <div class="celula">
+                            <div class="celula_titulo">
+                                PINTO
+                            </div>
+                            <div class="celula_corpo">
+                                O pinto pia</br>
+                                A pipa</br>
+                                Pinga.</br>
+                                Pinga a pipa,</br>
+                                O pinto pia.</br>
+                                Quanto mais</br>
+                                O pinto pia.</br>                             
+                            </div>
+                        </div>
+                        <div class="celula">
+                            <div class="celula_titulo">
+                                A PIA PERTO DO PINTO
+                            </div>
+                            <div class="celula_corpo">
+                                O pinto perto da pia</br>
+                                Tanto mais a pia pinga</br>
+                                Mas o pinto pia...</br>
+                                A pia pinga,</br>
+                                O pinto pia,</br>
+                                Pia pinto.</br>
+                                O pinto perto da pia,</br>
+                                A pia perto do pinto.</br>                           
+                            </div>
+                        </div>
+                        <div class="celula">
+                            <div class="celula_titulo">
+                                O PAI DO PADRE
+                            </div>
+                            <div class="celula_corpo">
+                                O peito do pai</br>
+                                Do padre Pedro</br>
+                                É preto.</br>                              
+                            </div>
+                        </div>
+                        <div class="celula">
+                            <div class="celula_titulo">
+                                DORA
+                            </div>
+                            <div class="celula_corpo">
+                                A sombra da amoreira</br>
+                                Dora namora.<br/>
+                                No ramo da goiabeira</br>
+                                A cigarra mora.</br>                            
+                            </div>
+                        </div>
+                        <div class="celula">
+                            <div class="celula_titulo">
+                                A LONTRA
+                            </div>
+                            <div class="celula_corpo">
+                                A lontra prendeu a</br>
+                                tromba do monstro de pedra</br>
+                                e a prenda de prata</br>
+                                de Pedro, o pedreiro.</br>                        
+                            </div>
+                        </div>
+                        <div class="celula">
+                            <div class="celula_titulo">
+                                CAROLINA
+                            </div>
+                            <div class="celula_corpo">
+                                No alto da torre</br>
+                                Sonha Carolina.</br>
+                                Debaixo da parreira</br>
+                                Brinca Marina.</br>                             
+                            </div>
+                        </div>
+                        <div class="celula">
+                            <div class="celula_titulo">
+                                Palavra</br>
+                                <i>(Lourdes Nova)</i>
+                            </div>
+                            <div class="celula_corpo">
+                                Palavra</br>
+                                se lavra</br>
+                                No livro que livra</br>
+                                Do analfabetismo.</br>                            
+                            </div>
+                        </div>
+                        <div class="celula">
+                            <div class="celula_titulo">
+                                ARANHA
+                            </div>
+                            <div class="celula_corpo">
+                                A aranha arranha a rã.</br>
+                                A rã arranha a aranha.</br>
+                                Nem a aranha arranha a rã.</br>
+                                Nem a rã arranha a aranha.</br>                       
+                            </div>
+                        </div>
+                        <div class="celula">
+                            <div class="celula_titulo">
+                                LARGATIXA
+                            </div>
+                            <div class="celula_corpo">
+                                Larga a tia, lagartixa!</br>
+                                Lagartixa, larga a tia!</br>
+                                Só no dia que sua tia</br>
+                                chamar lagartixa</br>
+                                de lagartinha!</br>                            
+                            </div>
+                        </div>
+                        <div class="celula">
+                            <div class="celula_titulo">
+                                TIQUE-TAQUE
+                            </div>
+                            <div class="celula_corpo">
+                                Para ouvir o tique-taque,</br>
+                                Tique-taque, tique-taque,</br>
+                                Depois que um tique toca</br>
+                                É que se toca um taque.</br>                         
                             </div>
                         </div>
                     </div>
@@ -541,6 +718,113 @@
             </div>
         </div>
 
+
+        <div class="row">
+            <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12">
+                <center>
+                    <p>
+                        <b>PARLENDA</b>
+                    </p>
+                </center>
+                    <p>
+                        A <b>parlenda</b> é um gênero de texto de origem popular,
+                        que varia de região a região, no entanto, tem uma
+                        essência comum.
+                    </p>
+                    <p>
+                        A parlenda deve ser um instrumento de ensino-
+                        aprendizagem nas atividades iniciais de leitura,
+                        desenvolvimento da oralidade e escrita por ser um
+                        gênero de texto de fácil domínio. Apresenta-se em forma
+                        de versos de cinco ou seis sílabas de ritmo fácil para
+                        ser declamado com foco na acentuação.
+                    </p>
+                    <p>
+                        <b>OBJETIVO:</b>desenvolver a linguagem oral propiciando uma
+                        reflexão sobre a escrita; apropriar-se da base
+                        alfabética; apreciar os recursos poéticos; pronunciar
+                        as palavras adequadamente; expressar-se sem tropeçar e
+                        sem inibição.
+                    </p>
+                    <p>
+                        <b>PROCEDIMENTOS</b></br>
+                        <ul>
+                            <li>
+                                Faça um levantamento com os alunos sobre o
+                                conhecimento que eles têm deste gênero de texto;
+                            </li>
+                            <li>
+                                Exponha em cartaz na sala de aula uma parlenda e
+                                trabalhe com ela aproximadamente uma semana;
+                            </li>
+                            <li>
+                                Realize leituras semanalmente de parlendas
+                                variadas. A leitura deverá ser sempre feita,
+                                primeiramente por você, em seguida compartilhada
+                                (você e um aluno) e por fim, coletiva (para
+                                descontrair, divertir).
+                            </li>
+                            <li>
+                                Os alunos devem copiar o texto; realizar as
+                                atividades de consciência fonológicas identificar
+                                palavras que rimam, produzir palavras que rimam
+                                com outra, identificar palavras que começam com o
+                                mesmo fonema;
+                            </li>
+                            <li>
+                                Produza atividades escritas como: <b>lacunado</b> (abra
+                                lacunas no texto para que o aluno escreva palavras
+                                que faltam na parlenda); <b>caça-letra</b> e <b>caça-
+                                palavras</b> (peça aos alunos que circulem letras e
+                                palavras na parlenda); <b>ordenação de tirinhas</b>
+                                (recorte cada verso da parlenda e peça aos alunos
+                                para reordená-los, colando em uma folha de papel
+                                ou caderno), <b>cruzadinhas</b> (com palavras ou figuras
+                                da parlenda).
+                            </li>
+                            <li>
+                                Produza um livro de coletâneas de parlendas.
+                            </li>
+                        </ul>
+                    </p>
+                    <p>
+                        <b>SOCIALIZAÇÃO: </b>
+                        <ul>
+                            <li>Exposição dos textos e livro;</li>
+                            <li>Recital de parlendas (falar sem tropeçar nas
+                                palavras).</li>
+                        </ul>
+                    </p>
+                    <p>
+                        <b>EXEMPLARES DE TEXTOS</b>
+                    </p>
+                    <p>
+                        Um, dois, feijão com arroz,
+                        Três, quatro, feijão no prato,
+                        Cinco, seis, feijão pra três,
+                        Sete, oito, feijão com biscoito,
+                        Nove, dez, feijão com pastéis.
+                    </p>
+                    <p>
+                        <b>PROCEDIMENTO:</b>cada aluno deverá recitar a parlenda,
+                        repetindo palavra por palavra e, ao terminar, deverá
+                        dizer “O Sr. diga a última palavra, e acrescente “de
+                        sete facadas”.</br>                      
+                        <div id="alinhamento">
+                        -Eu ia por um <b>caminho</b>...</br>
+                        -Caminho de sete <b>facadas</b>...</br>
+                        -Encontrei uma <b>vaca</b>...</br>
+                        -<b>Vaca</b> de sete facas...</br>
+                        -Encontrei um <b>morro</b>...</br>
+                        -<b>Morro</b> de sete facadas...</br>
+                        (VER EXEMPLARES DE PARLENDAS EM LEITURAS COMPLEMENTARES).
+                        </div>
+                    </p>
+            </div>
+        </div>
+
+
+        
 
 
 
