--- a/conteudo/unidadepalavra/1.html
+++ b/conteudo/unidadepalavra/1.html
@@ -55,6 +55,7 @@
         body {
             padding: 0;
             margin: 0;
+            
         }
 
         .container-fluid {
@@ -185,6 +186,80 @@
                 </p>
                 <p>
                     No segundo momento, desenvolveremos a contextualização da leitura e escrita objetivando possibilitar aos alunos o contato com gêneros de textos variados em um universo de temas geradores significativos: trabalho, folclore, meio-ambiente; incentivar seu potencial criativo para que perceba a leitura e a escrita como algo prazeroso e significativo para sua vida e refletir sua realidade sociocultural e econômica, dando ênfase à sua formação crítica.
+                </p>
+                <div style="width:40%; margin: auto; text-align: center; font-weight: bold;">
+                    <p>
+                        NOME É NOME (JOSÉ PAULO PAES)
+                    </p>
+                    <p align="justify">
+                        VOCÊ POR ACASO CONHECEU
+                        UM CONTADOR CHAMADO ROMEU?
+                        TODA VEZ QUE ERRAVA
+                        AS CONTAS, GRITAVA:
+                        ERRO MEU! ERRO MEU! ERRO MEU!
+                    </p>
+                    <p align="justify">
+                        INESPERADAMENTE, A MINHA TIA INÊS
+                        SOLTOU NA RUA O MEU CÃOZINHO PEQUINÊS.
+                        MAS FOI-LHE PERDOADO
+                        ESSE GRAVE PECADO.
+                    </p>
+                    <p align="justify">
+                        O PADRE SÓ DISSE: “NUNCA MAIS PEQUE, INÊS!”
+                        EM QUE ESTAÇÃO DO ANO
+                        NASCEU VERA, A MINHA PRIMA?
+                        ESSA ATÉ RIMA.
+                        NÃO TEM ENGANO.
+                        NASCEU NA PRIMAVERA
+                        A MINHA PRIMA VERA.
+                    </p>
+                </div>
+                <p style="text-indent: 0 !important;">
+                    <b>COMPREENSÃO DA LEITURA</b> (faça oralmente, após a leitura em voz alta)</br>
+                    - Este texto é um ...</br>
+                    - Quem escreveu?</br>
+                    - Quem está sendo procurado?</br>
+                    - Qual era a profissão de Romeu?</br>
+                    - Romeu quando errava costumava fazer o quê?</br>
+                    - Quem a tia Inês soltou na rua?</br>
+                    - O que aconteceu com ela depois?</br>
+                    - O que o padre falou para a tia Inês?</br>
+                    - A última estrofe do poema menciona uma estação do
+                    ano. Qual?</br>
+                </p>
+                <p>
+                    <div style="display: flex;">
+                        <div style="display: flex; flex: 1; border: 1px solid black;">
+                            &nbsp;
+                        </div>
+                        <div style="display: flex; flex: 1; border: 1px solid black;">
+                            &nbsp;
+                        </div>
+                        <div style="display: flex; flex: 1; border: 1px solid black;">
+                            &nbsp;
+                        </div>
+                        <div style="display: flex; flex: 1; border: 1px solid black;">
+                            &nbsp;
+                        </div>
+                        <div style="display: flex; flex: 1; border: 1px solid black;">
+                            &nbsp;
+                        </div>
+                        <div style="display: flex; flex: 1; border: 1px solid black;">
+                            &nbsp;
+                        </div>
+                        <div style="display: flex; flex: 1; border: 1px solid black;">
+                            &nbsp;
+                        </div>
+                        <div style="display: flex; flex: 1; border: 1px solid black;">
+                            &nbsp;
+                        </div>
+                        <div style="display: flex; flex: 1; border: 1px solid black;">
+                            &nbsp;
+                        </div>
+                        <div style="display: flex; flex: 1; border: 1px solid black;">
+                            &nbsp;
+                        </div>
+                    </div>
                 </p>
             </div>
         </div>
